@@ -1,11 +1,10 @@
 Package: twitteR
 Title: R based Twitter client
 Description: Provides an interface to the Twitter web API
-Version: 1.1.4
+Version: 1.1.5
 Author: Jeff Gentry <geoffjentry@gmail.com>
 Maintainer: Jeff Gentry <geoffjentry@gmail.com>
-Depends: R (>= 2.12.0), RCurl, rjson (>= 0.2.12), methods
-Suggests: ROAuth (>= 0.9.0)
+Depends: R (>= 2.12.0), ROAuth (>= 0.9.4), RCurl, rjson (>= 0.2.12), methods
 License: Artistic-2.0
 LazyData: yes
 URL: http://lists.hexdump.org/listinfo.cgi/twitter-users-hexdump.org
