@@ -5,6 +5,7 @@ exportMethods(as.data.frame, screenName, show, favorited, replyToSN,
               protected, verified, location, lastStatus, show,
               description, name, id, statusText, truncated, statusSource)
 
+export("getTwitterOAuth")
 export("getCurRateLimitInfo")
 export('statusFactory')
 export('buildStatus')
